[tool.poetry]
name = "data-visualization"
version = "0.1.0"
description = ""
authors = ["Ayman Naif <ayman_naif@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
seaborn = "^0.11.1"
matplotlib = "^3.4.2"
jupyterlab = "^3.0.16"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
